--- a/.github/workflows/notify-deployment.yaml
+++ b/.github/workflows/notify-deployment.yaml
@@ -4,7 +4,7 @@ on:
     types:
       - closed
     branches:
-      - temp-test
+      - main
     paths-ignore:
       - "test/**"
       - "**/*.test.js"
@@ -15,6 +15,7 @@ on:
       - ".npmrc"
       - ".nycrc"
       - "README.md"
+      - ".github/**"
 
 jobs:
   notify-to-slack:
